	added missing log methods for priority 'fatal'.

2002-01-10 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* configure.in: added check for strcasecmp() and stricmp().
	* include/log4cpp/config-win32.h: have stricmp() but not strcasecmp().
	* include/log4cpp/Portability.hh: use stricmp() if strcasecmp() is
	not available.

	* include/log4cpp/RemoteSyslogAppender.hh: added SyslogFacility type.
	
2002-01-09 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/SimpleConfigurator.cpp: skip all whitespace before PatternLayout 
	pattern, not just one.

	* include/log4cpp/RollingFileAppender.cpp,
	include/log4cpp/Makefile.am,
	src/RollingFileAppender.cpp, src/MakeFile.am: 
	added RollingFileAppender contributed by Alex Tapaccos.
	
2002-01-08 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/SimpleConfigurator.cpp: skip space before PatternLayout 
	pattern (Bug #500766).

	* src/SimpleConfigurator.cpp: fix screwy fix for Bug #500766,
	now using Alex' method. (Obsoletes Patch #500832).

2002-01-04 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/config-openvms.h: #include <inttypes.h> for int64_t.

	* src/PatternLayout.cpp(doFormat): removed superfluous return
	statement.

	* include/log4cpp/config-win32.h: fix int64_t for Borland compiler.

	* include/log4cpp/SyslogAppender.hh,
	include/log4cpp/RemoteSyslogAppender.hh,
	src/SyslogAppender.cpp, src/RemoteSyslogAppender.cpp:
	inherit from LayoutApppender instead of AppenderSkeleton 
	(Bug #499524).
	
2002-01-03 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/Filter.hh: decide() is NOT abstract.

	* tests/testFilter.cpp: added
	* tests/Makefile.am: added testFilter.cpp to tests.
	
2001-12-21 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* Release as 0.2.6b
	
	* configure.in: upped release to 0.2.6b
	
	* src/Priority.cpp: getPriorityValue(): fix bug in numerical input 
	handling.

	* tests/Makefile.am: added very simple test for Priority.
	* tests/testPriority.cpp: added.
	